<?xml version="1.0" encoding="utf-8"?>

    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <!--android:background="@color/color_background_button"-->
    <RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background_button"
       >


        <LinearLayout
            android:id="@id/mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:weightSum="1">
            <ImageView
                android:layout_above="@+id/mid"
                android:id="@+id/imageView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/logo2"
                android:layout_gravity="center"
                android:layout_weight="0.89" />
            <EditText
                android:id="@+id/edtk"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:background="@drawable/group_top"
                android:hint="@string/st_hintEmail"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:paddingLeft="6dp" />

            <EditText
                android:id="@+id/edmk"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:background="@drawable/group_bottom"
                android:fontFamily="sans-serif"
                android:hint="@string/st_hintPass"
                android:inputType="textPassword"
                android:padding="16dp"
                android:paddingLeft="6dp" />

            <Button
                android:id="@+id/btlog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginRight="34dp"
                android:layout_marginTop="24dp"
                android:scrollbars="vertical"
                android:text="@string/st_btnLogin"
                android:background="@android:color/white"/>
            <RelativeLayout
                android:layout_below="@+id/mid"
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="16dp">


                <TextView
                    android:id="@+id/link_fw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:text="@string/st_forgotPass"
                    android:textColor="@android:color/white"
                    android:layout_centerInParent="true"/>
            </RelativeLayout>
            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal" />


            <TextView

                android:id="@+id/link_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:scrollbars="vertical"
                android:text="@string/st_chuacoTK"
                android:textColor="@android:color/white"

                />
        </LinearLayout>



        </RelativeLayout>

</ScrollView>