<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

   >

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"  />

            <android.support.design.widget.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:tabMode="fixed"
                app:tabGravity="fill"
                app:tabIndicatorColor="@android:color/white"
                app:tabIndicatorHeight="3dp"/>

        <!--</android.support.design.widget.CollapsingToolbarLayout>-->

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:fab="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/fabMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true"
            fab:menu_backgroundColor="#ccffffff"

            android:layout_marginLeft="8dp"
            fab:menu_animationDelayPerItem="0"
            fab:menu_buttonSpacing="0dp"
            fab:menu_colorNormal="#303F9F"
            fab:menu_colorPressed="#1A237E"
            fab:menu_colorRipple="#99d4d4d4"
            fab:menu_fab_size="normal"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_labels_colorNormal="#333"
            fab:menu_labels_colorPressed="#444"
            fab:menu_labels_colorRipple="#66efecec"
            fab:menu_labels_cornerRadius="3dp"
            fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
            fab:menu_labels_margin="0dp"
            fab:menu_labels_maxLines="-1"
            fab:menu_labels_padding="8dp"
            fab:menu_labels_position="left"
            fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
            fab:menu_labels_textColor="#f2f1f1"
            fab:menu_labels_textSize="15sp"
            fab:menu_openDirection="up"
            fab:menu_shadowRadius="4dp"

            >
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabmaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_location_on_white_24dp"
                fab:fab_label="@string/st_location"
                fab:fab_size="mini"
                style="@style/MenuGreen"
                />
            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabCall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_call_white_24dp"
                fab:fab_label="@string/st_goidienCV"
                fab:fab_size="mini"
                style="@style/MenuGreen"/>

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fabSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_save_white_24dp"
                fab:fab_label="@string/st_ungtuyenCV"
                fab:fab_size="mini"
                style="@style/MenuGreen"/>

        </com.github.clans.fab.FloatingActionMenu>
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>