<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main_swipe_refresh_layout"
    >
    <android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="fill_vertical"
        android:clipToPadding="false"
        android:isScrollContainer="false"
        >
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >
        <RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f7f7f7"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/toprecruiter"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:layout_margin="10dp"
                android:id="@+id/txt"
                android:visibility="gone"/>
                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/newcompany"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="none"
                        android:layout_marginLeft="8dp"
                        android:layout_below="@id/txt"
                        />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_activity_more_new_"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:id="@+id/txt2"
                android:textAllCaps="true"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_margin="10dp"
                android:layout_below="@id/newcompany"
                android:visibility="gone"/>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:layout_below="@id/txt2"
                android:id="@+id/scr">
                        <android.support.v7.widget.RecyclerView
                          android:id="@+id/recycler_view"
                          android:layout_width="match_parent"
                          android:layout_height="wrap_content"
                          android:scrollbars="vertical"
                         />
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/scr"
                android:padding="10dp"
                android:id="@+id/linmore"
                android:background="?android:attr/selectableItemBackground"
                >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more"
                android:gravity="center"
                android:textAllCaps="true"
                android:textColor="@color/text"
                android:textStyle="bold"
                android:textSize="15dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/jobhot"
                android:textColor="@color/text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:id="@+id/txt3"
                android:layout_margin="10dp"
                android:textAllCaps="true"
                android:layout_below="@id/linmore"
                android:visibility="gone"/>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:id="@+id/src2"
                android:layout_below="@id/txt3">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_hot"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    />
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@+id/src2"
                android:padding="10dp"
                android:id="@+id/linhot"
                android:background="?android:attr/selectableItemBackground"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearhere"
                android:layout_margin="10dp"
                android:id="@+id/txt7"
                android:textColor="@color/text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:layout_below="@id/linhot"
                android:visibility="gone"/>
            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:id="@+id/src3"
                android:layout_below="@id/txt7">
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_view_near"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbars="vertical"
                    />
            </ScrollView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_below="@id/src3"
                android:padding="10dp"
                android:id="@+id/linnear"
                android:background="?android:attr/selectableItemBackground"
                >
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/more"
                    android:gravity="center"
                    android:textAllCaps="true"
                    android:textColor="@color/text"
                    android:textStyle="bold"
                    android:textSize="15dp"/>
            </LinearLayout>

                    <ProgressBar
                        android:id="@+id/pbLoader"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        style="?android:attr/progressBarStyle"
                        android:layout_below="@id/newcompany">
                    </ProgressBar>
            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.NestedScrollView>
</android.support.v4.widget.SwipeRefreshLayout>